codepkg/objects/Genetic_Counseling_Note__c.object
<CustomObject>
    <fields>
        <fullName>faxAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>Send Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>latestFax__c</fullName>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>producedId__c</fullName>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>producedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receivedId__c</fullName>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>receivedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFaxAt__c</fullName>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sentFaxStatus__c</fullName>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>Sent Document Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper Custom Fields for faxing for triggering workflows</description>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>